# bld.ai-Internship

./: README.md
Back-End Phase/Python Task/: assignment.py
FirstDjangoAssignment/: db.sqlite3  manage.py  pyproject.toml
FirstDjangoAssignment/firstAssignment/: asgi.py  settings.py  urls.py  wsgi.py
FirstDjangoAssignment/mainMenu/: apps.py  data.json  urls.py  views.py
Python Task/: assignment.py
projectOneUdemy/: README.md  Udemy.html  udemy.css
