[tool.poetry]
name = "firstdjangoassignment"
version = "0.1.0"
description = "First assignment django"
authors = ["Saeed Mabrouk"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
